# FastMETRO

./: .gitignore  MEMO.md  pyproject.toml  run.sh  run_dev.sh  run_infer.sh  setup.py
scripts/: onnx_export.py  test_infer_model.py  test_onnx.py  test_sparse.py
scripts/custom/: train.py
scripts/dataset/: convert_to_dict.py  ring_calc_maker.py  test_loader.py
scripts/onnx/: export_v2.py
scripts/tests/: test_data_sampler.py  test_fastmetro_loader.py  test_infer_with_logic.py  test_intersection.py  test_load_mymodel_and_infer.py  test_matplotlib.py  test_matplotlib_back.py
src/: __init__.py
src/datasets/: build.py  hand_mesh_tsv.py  human_mesh_tsv.py
src/handinfo/: fastmetro.py  losses.py  parser.py  utils.py  visualize.py
src/handinfo/data/: tools.py
src/handinfo/mano/: __init__.py
src/handinfo/ring/: calculator.py  helper.py  plane_collision.py
src/modeling/: __init__.py  _mano.py  _smpl.py
src/modeling/data/: config.py
src/modeling/hrnet/: hrnet_cls_net.py  hrnet_cls_net_featmaps.py
src/modeling/hrnet/config/: default.py
src/modeling/model/: __init__.py  modeling_custom.py  modeling_fastmetro.py  position_encoding.py  smpl_param_regressor.py  transformer.py
src/tools/: end2end_inference_bodymesh.py  end2end_inference_handmesh.py  run_fastmetro_bodymesh.py  run_fastmetro_handmesh.py
src/utils/: dataset_utils.py  geometric_layers.py  image_ops.py  logger.py  metric_logger.py  metric_pampjpe.py  miscellaneous.py  renderer_opendr.py  renderer_pyrender.py  tsv_file.py  tsv_file_ops.py
