[tool.poetry]
name = "fastmetro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = "(.git|.mypy_cache|.venv)"

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
# ignore = "E203,E266,W503,"
extend-ignore = "E203"
