[tool.poetry]
name = "fastmetro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
matplotlib = "^3.6.3"
opencv-python = "^4.7.0.68"
torch = "^1.13.1"
torchvision = "^0.14.1"
scikit-image = "^0.19.3"
scipy = "^1.10.0"
yacs = "^0.1.8"
cython = "^0.29.33"
chumpy = {git = "https://github.com/mur6/chumpy.git", rev = "master"}
pyrender = "^0.1.45"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
exclude = "(.git|.mypy_cache|.venv)"

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
# ignore = "E203,E266,W503,"
extend-ignore = "E203"
